feat: change the outputfile of view-all.sh